public/styles/material.css
.material-icons {
    display: inline-flex;
    vertical-align: text-bottom;
}

/* Rules for sizing the icon. */

.material-icons.md-18 {
    font-size: 18px;
}

.material-icons.md-24 {
    font-size: 24px;
}

.material-icons.md-36 {
    font-size: 36px;
}

.material-icons.md-48 {
    font-size: 48px;
}

/* Rules for using icons as black on a light background. */

.material-icons.md-dark {
    color: rgba(0, 0, 0, 0.54);
}

.material-icons.md-dark.md-inactive {
    color: rgba(0, 0, 0, 0.26);
}

/* Rules for using icons as white on a dark background. */

.material-icons.md-light {
    color: rgba(255, 255, 255, 1);
}

.material-icons.md-light.md-inactive {
    color: rgba(255, 255, 255, 0.3);
}

.portfolio-column:hover {
    opacity: .6;
}

.portfolio-column {
    width: 30%;
    cursor: pointer;
    float: left;
}

html, body {
    scroll-behavior: smooth !important;
    height: 100%;
    margin: 0;
    font-family: 'Roboto', sans-serif !important;
}

.content {
    min-height: 100%;
}

.content-inside {
    padding: 20px;
    padding-bottom: 50px;
}

.footer {
    height: 100px;
    margin-top: -50px;
    color: rgba(255, 255, 255, .75);
}

.footer-link {
    color: rgba(255, 255, 255, .75);
}

.footer-link:hover {
    color: #fff;
}

footer {
    background: #4e5d6c;
    color: #fff;
    line-height: 30px;
    padding: 0 20px;
}

::-webkit-scrollbar {
    background-color: #202324;
    color: #aba499;
    width: 5px;
}

::-webkit-scrollbar-corner {
    background-color: #181a1b;
}

::-webkit-scrollbar-thumb {
    background-color: #454a4d;
}

.nav-link {
    cursor: pointer;
}

